--- a/src/components/index.css
+++ b/src/components/index.css
@@ -43,6 +43,22 @@
 body {
   background: var(--bg-color);
 }
+
+.dark-mode {
+  position: fixed;
+  outline: none;
+  border: none;
+  background: var(--table-color);
+  color: var(--table-color);
+  cursor: pointer;
+  bottom: 0;
+  left: 50%;
+  width: 100%;
+  padding: 5px;
+  transform: translateX(-50%);
+  font-size: calc(25px + 8 * ((100vw - 320px) / (1200 - 320)));
+}
+
 .calendar {
   margin-top: calc(15px + 32 * ((100vw - 320px) / (1200 - 320)));
   margin-bottom: calc(20px + 20 * ((100vw - 320px) / (1200 - 320)));
@@ -89,7 +105,6 @@ body {
 .calendar header p,
 .calendar header button,
 .calendar header p span button {
-  font-size: 120px;
   font-size: calc(25px + 38 * ((100vw - 320px) / (1200 - 320)));
   display: flex;
   justify-content: space-between;
