--- a/src/components/index.css
+++ b/src/components/index.css
@@ -2,7 +2,7 @@
   --bg-color: #fff;
   --text-color: linear-gradient(97.64deg, #ff621f 3.48%, #ac25ff 88.39%);
   --date-color: #e6007e;
-  --day-color: #0081ff;
+  --theme-color: #000;
   --month-day-color: #83818e;
   --text-day-color: #281533;
   --table-color: radial-gradient(
@@ -25,7 +25,7 @@
     #e6007e 297.52%
   );
   --date-color: #e6007e;
-  --day-color: #0081ff;
+  --theme-color: #fff;
   --month-day-color: #fff;
   --text-day-color: #fff;
   --table-color: linear-gradient(
@@ -48,13 +48,15 @@ body {
   position: fixed;
   outline: none;
   border: none;
-  background: var(--table-color);
-  color: var(--table-color);
+  background: var(--theme-color);
+  color: var(--bg-color);
   cursor: pointer;
   bottom: 0;
   left: 50%;
   width: 100%;
-  padding: 5px;
+  padding: 4px;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
   transform: translateX(-50%);
   font-size: calc(25px + 8 * ((100vw - 320px) / (1200 - 320)));
 }
@@ -99,7 +101,6 @@ body {
   cursor: pointer;
   outline: none;
   border: none;
-  margin: 0 4px;
 }
 
 .calendar header p,
@@ -115,6 +116,12 @@ body {
   color: transparent;
   -webkit-background-clip: text;
   background-clip: text;
+}
+
+.calendar-next,
+.calendar-prev {
+  margin: auto 0 !important;
+  font-size: calc(10px + 10 * ((100vw - 320px) / (1200 - 320))) !important;
 }
 
 .calendar-body {
@@ -152,7 +159,8 @@ body {
 }
 
 .calendar .day.selected {
-  border: 2px solid dodgerblue;
+  border: 2px solid var(--date-color);
+  border-radius: 4px;
 }
 
 .calendar .day.happy {
@@ -160,12 +168,14 @@ body {
 }
 
 .calendar .day.today {
-  background-color: var(--day-color);
+  background-color: var(--date-color);
   color: white;
+  border-radius: 4px;
+  transition: linear 0.2s;
 }
 
 .calendar .day.today:hover {
-  background-color: var(--day-color);
+  transform: scale(1.3);
 }
 
 .calendar .day.today.selected {
